BGE: Group API not working correct. #41299

Closed
opened 2014-08-02 22:33:18 +02:00 by Thomas Szepe · 6 comments
Member

Bugs:

  • If groupObject or groupMembers is used with group objects a NoneType object is returned.
  • If groupObject or groupMembers is use with the child object of the dupligroup instance a NoneType object is returned.

If groupMembers is use with the parent object of the dupligroup instance the child objects are missing in the list.

Group_API_Bug.blend

Bugs: - If groupObject or groupMembers is used with group objects a NoneType object is returned. - If groupObject or groupMembers is use with the child object of the dupligroup instance a NoneType object is returned. # If groupMembers is use with the parent object of the dupligroup instance the child objects are missing in the list. [Group_API_Bug.blend](https://archive.blender.org/developer/F101239/Group_API_Bug.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Mitchell Stokes was assigned by Thomas Szepe 2014-08-02 22:33:18 +02:00
Author
Member

Added subscriber: @hg1

Added subscriber: @hg1

Added subscriber: @Inwader77

Added subscriber: @Inwader77

This issue was referenced by 5dc22fbbfb

This issue was referenced by 5dc22fbbfbed0e825faa8faab8bc5f32a6fdd829

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 5dc22fbbfb.

Closed by commit 5dc22fbbfb.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41299
No description provided.