BGE: Fix T41299 Group API for child object in dupli instance group.